<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
  >

<group android:menuCategory="alternative" >

    <item
        android:id="@+id/allTrams"
        android:orderInCategory="100"
        android:title="@string/allTrams"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/noTrams"
        android:orderInCategory="100"
        android:title="@string/noTrams"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/t1"
        android:orderInCategory="101"
        android:title="@string/tram1"
        app:showAsAction="never"
        android:checkable="true"/>


    <item
          android:id="@+id/t2"
          android:orderInCategory="102"
          android:title="@string/tram2"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t3"
          android:orderInCategory="103"
          android:title="@string/tram3"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t4"
          android:orderInCategory="104"
          android:title="@string/tram4"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t6"
          android:orderInCategory="105"
          android:title="@string/tram6"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t7"
          android:orderInCategory="106"
          android:title="@string/tram7"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t9"
          android:orderInCategory="106"
          android:title="@string/tram9"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t10"
          android:orderInCategory="107"
          android:title="@string/tram10"
          app:showAsAction="never"
        android:checkable="true"
        />
    <item
          android:id="@+id/t11"
          android:orderInCategory="107"
          android:title="@string/tram11"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t13"
          android:orderInCategory="108"
          android:title="@string/tram13"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t14"
          android:orderInCategory="109"
          android:title="@string/tram14"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t15"
          android:orderInCategory="110"
          android:title="@string/tram15"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t17"
          android:orderInCategory="111"
          android:title="@string/tram17"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t18"
          android:orderInCategory="112"
          android:title="@string/tram18"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t20"
          android:orderInCategory="113"
          android:title="@string/tram20"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t22"
          android:orderInCategory="114"
          android:title="@string/tram22"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t23"
          android:orderInCategory="115"
          android:title="@string/tram23"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t24"
          android:orderInCategory="115"
          android:title="@string/tram24"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t25"
          android:orderInCategory="116"
          android:title="@string/tram25"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t26"
          android:orderInCategory="117"
          android:title="@string/tram26"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t27"
          android:orderInCategory="118"
          android:title="@string/tram27"
          app:showAsAction="never"
        android:checkable="true"
        />
    <item
          android:id="@+id/t28"
          android:orderInCategory="119"
          android:title="@string/tram28"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t31"
          android:orderInCategory="120"
          android:title="@string/tram31"
          app:showAsAction="never"
           android:checkable="true"/>
    <item
          android:id="@+id/t33"
          android:orderInCategory="121"
          android:title="@string/tram33"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
          android:id="@+id/t35"
          android:orderInCategory="122"
          android:title="@string/tram35"
          app:showAsAction="never"
        android:checkable="true"/>
    <item
        android:id="@+id/t44"
        android:orderInCategory="123"
        android:title="@string/tram44"
        app:showAsAction="never"
        android:checkable="true"/>

</group>
</menu>
