<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin_2"
    android:layout_marginTop="20dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin_2"
    android:weightSum="1"
    android:background="@color/colorPrimary">


    <TextView
        android:text="@string/tram_low_floor"
        android:paddingBottom="@dimen/text_view_margin"
        android:paddingTop="@dimen/text_view_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView0"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:textColor="@color/cast_expanded_controller_text_color"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4" />

    <TextView
        android:text="@string/tram_standing"
        android:paddingBottom="@dimen/text_view_margin"
        android:paddingTop="@dimen/text_view_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:textColor="@color/cast_expanded_controller_text_color"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignLeft="@+id/textView0"
        android:layout_alignStart="@+id/textView0" />

    <TextView
        android:text="@string/tram_unknown_direction"
        android:paddingBottom="@dimen/text_view_margin"
        android:paddingTop="@dimen/text_view_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="@color/cast_expanded_controller_text_color"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1" />

    <TextView
        android:text="@string/stop"
        android:paddingBottom="@dimen/text_view_margin"
        android:paddingTop="@dimen/text_view_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="@color/cast_expanded_controller_text_color"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unknown"
        android:id="@+id/imageView3"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_below="@+id/imageView2"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/stop_sign"
        android:id="@+id/imageView5"
        tools:layout_editor_absoluteY="212dp"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imageView3"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3" />

    <TextView
        android:text="@string/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5"
        android:textColor="@color/cast_expanded_controller_text_color" />

    <TextView
        android:text="@string/conditions"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:id="@+id/textView"
        android:textColor="@color/cast_expanded_controller_text_color"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:text="@string/legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="@color/cast_expanded_controller_text_color"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginTop="21dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/standing"
        android:id="@+id/imageView2"
        tools:layout_editor_absoluteY="92dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/imageView4"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/moving"
        android:id="@+id/imageView4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:id="@+id/textView11"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tram_moving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/text_view_margin"
        android:paddingTop="@dimen/text_view_margin"
        android:id="@+id/textView6"
        android:textColor="@color/cast_expanded_controller_text_color"
        android:layout_above="@+id/imageView4"
        android:layout_alignLeft="@+id/textView0"
        android:layout_alignStart="@+id/textView0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/moving2"
        android:id="@+id/imageView"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />


</RelativeLayout>

